Created Code to Convert pb and keras model to tflite
Added Code that enables us to convert our keras model into tflite and our .pb model from using the saved_model function into the tflite

--- a/fruits_&_vegetables_freshness.ipynb
+++ b/fruits_&_vegetables_freshness.ipynb
@@ -384,13 +384,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O3BdXzYoCx8a",
-        "outputId": "7e10230b-847a-4775-9373-5e11c854084b"
+        "outputId": "7293d083-d548-4883-c0cb-1eeb34ed9f91"
       },
       "outputs": [
         {
@@ -456,12 +456,12 @@
       ],
       "metadata": {
         "id": "dMblpjDsLxbw",
-        "outputId": "fea7549d-0d8b-430e-8a73-fbe5f2fce207",
+        "outputId": "542b481f-fd57-4ffe-c306-83114faaa0f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
         "id": "DdiK-iZNDt00",
         "outputId": "52dcf0b0-10f4-4ef2-d6ac-90889fb9f65a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5508,7 +5508,7 @@
       "metadata": {
         "id": "5OH91XMID6H9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5534,7 +5534,7 @@
       "metadata": {
         "id": "aY5sErmTEA-b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5552,7 +5552,7 @@
         },
         "outputId": "2bc53442-8c12-42a8-ee4d-57bc96e50134"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5602,7 +5602,7 @@
         },
         "outputId": "3d658a16-856c-460d-f34d-65221099d803"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5777,7 +5777,7 @@
       "metadata": {
         "id": "S29530TsDSwo"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5791,7 +5791,7 @@
       "metadata": {
         "id": "LHd7GLEKDFHM"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5805,7 +5805,7 @@
       "metadata": {
         "id": "frX9pV30FIzC"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5829,7 +5829,7 @@
       "metadata": {
         "id": "ebHTad6lFWt2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5847,7 +5847,7 @@
         },
         "outputId": "9e95d924-c2d2-4edc-a08c-79e723b4d2f8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5883,7 +5883,7 @@
         },
         "outputId": "d1aeb324-5066-4f09-f2c3-38bd395d5309"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6134,7 +6134,7 @@
       "metadata": {
         "id": "XQ02jd_yGx_F"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6148,7 +6148,7 @@
       "metadata": {
         "id": "bnxq16gXGwI3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6202,7 +6202,7 @@
         },
         "outputId": "864b3314-aa53-4930-c7e4-099d1fd2495b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11265,7 +11265,7 @@
         },
         "outputId": "d49645c1-2125-4012-f057-a763ab6b56a6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11319,7 +11319,7 @@
         },
         "outputId": "ecbd6793-d0f3-4502-ec21-92fe3ce424e3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11364,7 +11364,7 @@
         },
         "outputId": "8a7fc301-8092-4719-f667-df6d496d55cc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11409,7 +11409,7 @@
         },
         "outputId": "23e63e40-940a-41a9-c76d-b2613aa62ee6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11440,7 +11440,7 @@
       "metadata": {
         "id": "buOSMIVdNcRe"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11466,7 +11466,7 @@
         "id": "anRNZXHASIpn",
         "outputId": "1ef263e5-4307-451c-d0ab-b016fa3e3bcd"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11503,7 +11503,7 @@
         "id": "6Nc0tYIaSU9z",
         "outputId": "342df655-b606-4cbd-8349-229cd1b57230"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11572,7 +11572,7 @@
       "metadata": {
         "id": "ZFHAi1YMShON"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11589,7 +11589,7 @@
         "id": "KAluxesXYC_I",
         "outputId": "817ba968-aeee-4153-aeeb-49a105b167a0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11624,7 +11624,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11649,7 +11649,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12676,7 +12676,7 @@
         "id": "Tzdg0MvNYdQ7",
         "outputId": "8952cbc7-a653-4be7-8d4b-ac1d82752d63"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12744,7 +12744,7 @@
       "metadata": {
         "id": "wLfHDZe7YmRg"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12795,7 +12795,7 @@
         },
         "outputId": "f8f8f420-817d-419b-93e4-0682003b1138"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12856,7 +12856,7 @@
         "id": "DmocuVGWoj-v",
         "outputId": "0eb66a0e-252f-4c83-fd89-b58160ec35ab"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12898,7 +12898,7 @@
       "metadata": {
         "id": "EsKiF01klTzT"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12916,7 +12916,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12965,7 +12965,7 @@
           "height": 107
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13215,7 +13215,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13270,7 +13270,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13310,7 +13310,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13320,6 +13320,122 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Convert our model into tflite"
+      ],
+      "metadata": {
+        "id": "Q9JGIj3g7ORq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This Code might not be needed if you are running all of the code block from the beginning. This code is made because I downloaded the model as a zip file into my local machine, thus i need to unzip it again"
+      ],
+      "metadata": {
+        "id": "nZXGW6Bs_K1B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Unzip the file\n",
+        "# The Unzipped file will not be present on the corresponding folder, rather it will be transported to the top of the \n",
+        "# folder, being the /content/ folder, you need to transport it manually to the correct folder\n",
+        "!unzip '/content/saved_model/freshness_classifier/1/model/freshness_model.zip'"
+      ],
+      "metadata": {
+        "id": "hal-uj188D3b",
+        "outputId": "6f8554cb-8142-45ad-91e0-6467b66d81b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  /content/saved_model/freshness_classifier/1/model/freshness_model.zip\n",
+            "   creating: assets/\n",
+            "   creating: variables/\n",
+            "  inflating: saved_model.pb          \n",
+            "  inflating: fingerprint.pb          \n",
+            "  inflating: variables/variables.data-00000-of-00001  \n",
+            "  inflating: variables/variables.index  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_path = '/content/saved_model/freshness_classifier/1/model'"
+      ],
+      "metadata": {
+        "id": "76rbhthF7AbT"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Convert our Model from a keras format. I.E the normal Sequential Model that we made"
+      ],
+      "metadata": {
+        "id": "yNONl5tiDQm3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the model\n",
+        "model = tf.saved_model.load(model_path)\n",
+        "\n",
+        "# Convert the model.\n",
+        "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+        "tflite_model = converter.convert()\n",
+        "\n",
+        "# Save the model.\n",
+        "with open('/content/saved_model/freshness_classifier/1/imagelite_model.tflite', 'wb') as f:\n",
+        "  f.write(tflite_model)"
+      ],
+      "metadata": {
+        "id": "N01qBU3YCmkY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Convert out model into a tflite version From a saved_model format"
+      ],
+      "metadata": {
+        "id": "yqgbipq5_3bJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert the model\n",
+        "converter = tf.lite.TFLiteConverter.from_saved_model(model_path)\n",
+        "tflite_model = converter.convert()\n",
+        "\n",
+        "# Save the model.\n",
+        "with open('/content/saved_model/freshness_classifier/1/imagelite_model.tflite', 'wb') as f:\n",
+        "  f.write(tflite_model)"
+      ],
+      "metadata": {
+        "id": "Zv8UocqN_6zy"
+      },
+      "execution_count": 18,
+      "outputs": []
     }
   ]
 }
